--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,32 +9,32 @@
 
     <Button
         android:id="@+id/button_single_jersey"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="163dp"
-        android:layout_marginTop="182dp"
+        android:layout_marginStart="-1dp"
+        android:layout_marginTop="216dp"
         android:text="@string/single_jersey" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="179dp"
-        android:layout_marginTop="269dp"
+        android:layout_marginStart="-3dp"
+        android:layout_marginTop="294dp"
         android:text="@string/rib"
         anroid:id="@+id/button_rib" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="168dp"
-        android:layout_marginBottom="304dp"
+        android:layout_marginStart="-2dp"
+        android:layout_marginBottom="300dp"
         android:backgroundTint="#EBEAE4"
         android:text="@string/interlock"
         tools:ignore="RelativeOverlap" />
