--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,14 @@
         android:text="@string/single_jersey" />
 
     <Button
+        android:id="@+id/onexone_rib"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="-3dp"
         android:layout_marginTop="294dp"
-        android:text="@string/rib"
-        anroid:id="@+id/button_rib" />
+        android:text="@string/rib" />
 
     <Button
         android:id="@+id/button"
@@ -36,6 +36,7 @@
         android:layout_marginStart="-2dp"
         android:layout_marginBottom="300dp"
         android:backgroundTint="#EBEAE4"
+        android:maxWidth="100dip"
         android:text="@string/interlock"
         tools:ignore="RelativeOverlap" />
 
