--- a/app/src/main/res/layout/activity_interlock.xml
+++ b/app/src/main/res/layout/activity_interlock.xml
@@ -8,7 +8,7 @@
 
     <EditText
         android:id="@+id/editTextCylinderDiameter"
-        android:layout_width="169dp"
+        android:layout_width="wrap_content"
         android:layout_height="51dp"
         android:autofillHints=""
         android:background="@color/black"
@@ -19,7 +19,7 @@
 
     <EditText
         android:id="@+id/editTextMachineGauge"
-        android:layout_width="167dp"
+        android:layout_width="wrap_content"
         android:layout_height="51dp"
         android:autofillHints=""
         android:background="@color/black"
