--- a/app/src/main/res/layout/activity_interlock.xml
+++ b/app/src/main/res/layout/activity_interlock.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#80E48686"
+    android:background="@color/purple_200"
     android:padding="16dp">
 
     <EditText
