--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,36 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:anroid="http://schemas.android.com/apk/res-auto"
-    android:background="#F06666">
+    android:background="@color/purple_200">
 
     <Button
         android:id="@+id/button_single_jersey"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="216dp"
+        android:layout_marginStart="127dp"
+        android:layout_marginTop="202dp"
         android:text="@string/single_jersey" />
 
     <Button
         android:id="@+id/onexone_rib"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="-3dp"
-        android:layout_marginTop="294dp"
+        android:layout_marginStart="147dp"
+        android:layout_marginTop="277dp"
         android:text="@string/rib" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
+        android:id="@+id/interlock_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-2dp"
-        android:layout_marginBottom="300dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginBottom="337dp"
         android:backgroundTint="#EBEAE4"
         android:maxWidth="100dip"
         android:text="@string/interlock"
