--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:anroid="http://schemas.android.com/apk/res-auto"
-    android:background="@color/purple_200">
+    android:orientation="vertical"
+    android:padding="16dp"
+    xmlns:anroid="http://schemas.android.com/apk/res-auto">
 
-    <Button
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/welcome_to_knits_app"
+        android:textAlignment="center"
+        android:textColor="@color/purple_500"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:paddingTop="50dp"/>
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_single_jersey"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="127dp"
-        android:layout_marginTop="202dp"
-        android:text="@string/single_jersey" />
+        android:text="@string/click_here_to_go_calculation_page"
+        android:layout_marginTop="50dp"/>
 
-    <Button
-        android:id="@+id/onexone_rib"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="277dp"
-        android:text="@string/rib" />
-
-    <Button
-        android:id="@+id/interlock_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="142dp"
-        android:layout_marginBottom="337dp"
-        android:backgroundTint="#EBEAE4"
-        android:maxWidth="100dip"
-        android:text="@string/interlock"
-        tools:ignore="RelativeOverlap" />
-
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:paddingTop="100dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="46dp"
         android:contentDescription="@string/image_of_knitting"
         android:src="@drawable/machine" />
 
 
-</RelativeLayout>
+</LinearLayout>
