--- a/app/src/main/res/layout/activity_singlejersey.xml
+++ b/app/src/main/res/layout/activity_singlejersey.xml
@@ -2,13 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp">
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/menu"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/cylinder_diameter">
+        android:hint="@string/calc_method">
+
+        <com.google.android.material.textfield.MaterialAutoCompleteTextView
+            android:id="@+id/menuAutocompleteTextview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="none"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/cylinder_diameter"
+        android:paddingTop="10dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -64,11 +81,37 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Yarn Measurement Unit"
+        android:paddingTop="10dp"
+        />
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:checkedButton="@+id/radio_button_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/yarn_measurements">
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/radio_button_1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/english" app:useMaterialThemeColors="true"/>
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/radio_button_2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/denier" app:useMaterialThemeColors="true"/>
+    </RadioGroup>
+
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/yarnCountLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/yarn_count"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
