--- a/app/src/main/res/layout/activity_singlejersey.xml
+++ b/app/src/main/res/layout/activity_singlejersey.xml
@@ -141,7 +141,8 @@
         android:id="@+id/textViewResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:paddingTop="10dp"/>
 
 
     <LinearLayout
