--- a/app/src/main/res/layout/activity_singlejersey.xml
+++ b/app/src/main/res/layout/activity_singlejersey.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -81,36 +82,14 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Yarn Measurement Unit"
-        android:paddingTop="10dp"
-        />
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:checkedButton="@+id/radio_button_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/yarn_measurements">
-        <com.google.android.material.radiobutton.MaterialRadioButton
-            android:id="@+id/radio_button_1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/english" app:useMaterialThemeColors="true"/>
-        <com.google.android.material.radiobutton.MaterialRadioButton
-            android:id="@+id/radio_button_2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/denier" app:useMaterialThemeColors="true"/>
-    </RadioGroup>
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/yarnCountLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/yarn_count"
         android:paddingTop="10dp"
+        app:endIconMode="custom"
+        app:endIconDrawable="@drawable/ic_english_foreground"
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -121,6 +100,7 @@
             />
 
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -137,18 +117,83 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/textViewResult"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/binderYarnCountLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:paddingTop="10dp"/>
+        android:hint="@string/binder_yarn_count"
+        android:paddingTop="10dp"
+        android:visibility="gone"
+        app:endIconMode="custom"
+        app:endIconDrawable="@drawable/ic_english_foreground">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextBinderYarnCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/binderStitchLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/binder_stitch_count"
+        android:paddingTop="10dp"
+        android:visibility="gone">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextBinderStitchLength"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/fleeceYarnCountLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/fleece_yarn_count"
+        android:paddingTop="10dp"
+        android:visibility="gone"
+        app:endIconMode="custom"
+        app:endIconDrawable="@drawable/ic_english_foreground">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextFleeceYarnCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/fleeceStitchLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/fleece_stitch_count"
+        android:paddingTop="10dp"
+        android:visibility="gone">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextFleeceStitchLength"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonCalculate"
@@ -163,86 +208,5 @@
             android:layout_marginStart="10dp"
             android:text="@string/clear" />
     </LinearLayout>
-    <LinearLayout
-        android:id="@+id/fleeceOptionsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <!-- Binder Yarn Count -->
-        <EditText
-            android:id="@+id/editTextBinderYarnCount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Binder Yarn Count"
-            android:inputType="numberDecimal" />
-
-        <!-- Binder Yarn Count Unit -->
-        <RadioGroup
-            android:id="@+id/radioGroupBinderYarn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radio_button_binder_english"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="English Count"
-                android:checked="true" />
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radio_button_binder_denier"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Denier" />
-        </RadioGroup>
-
-        <!-- Fleece Yarn Count -->
-        <EditText
-            android:id="@+id/editTextFleeceYarnCount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Fleece Yarn Count"
-            android:inputType="numberDecimal" />
-
-        <!-- Fleece Yarn Count Unit -->
-        <RadioGroup
-            android:id="@+id/radioGroupFleeceYarn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radio_button_fleece_english"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="English Count"
-                android:checked="true" />
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radio_button_fleece_denier"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Denier" />
-        </RadioGroup>
-
-        <!-- Binder Stitch Length -->
-        <EditText
-            android:id="@+id/editTextBinderStitchLength"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Binder Stitch Length"
-            android:inputType="numberDecimal" />
-
-        <!-- Fleece Stitch Length -->
-        <EditText
-            android:id="@+id/editTextFleeceStitchLength"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Fleece Stitch Length"
-            android:inputType="numberDecimal" />
-    </LinearLayout>
-
-
-
-
 
 </LinearLayout>
